[package]
name = "faceless-video-wasm"
version = "1.0.0"
edition = "2021"
authors = ["Blatam Academy <team@blatam.academy>"]
description = "WebAssembly module for browser-based video and image processing"
license = "MIT"
repository = "https://github.com/blatam-academy/faceless-video-ai"
keywords = ["wasm", "video", "image", "processing", "webassembly"]
categories = ["wasm", "multimedia::images", "multimedia::video"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
simd = []  # Enable SIMD optimizations when available

[dependencies]
# ============================================
# WASM Core Bindings
# ============================================
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
js-sys = "0.3.66"

# ============================================
# Web APIs
# ============================================
web-sys = { version = "0.3.66", features = [
    # Console & Window
    "console",
    "Window",
    "Document",
    "Performance",
    "PerformanceTiming",
    
    # Canvas
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "TextMetrics",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    
    # Media
    "HtmlImageElement",
    "HtmlVideoElement",
    "MediaStream",
    "MediaStreamConstraints",
    "Navigator",
    "MediaDevices",
    "VideoTrack",
    "AudioTrack",
    
    # File handling
    "Blob",
    "BlobPropertyBag",
    "Url",
    "File",
    "FileReader",
    "FileList",
    
    # Workers
    "Worker",
    "WorkerGlobalScope",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "DedicatedWorkerGlobalScope",
    
    # Storage
    "Storage",
    
    # Fetch
    "Request",
    "RequestInit",
    "Response",
    "Headers",
] }

# ============================================
# Image Processing
# ============================================
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "gif",
] }
imageproc = "0.23"

# ============================================
# Serialization
# ============================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# ============================================
# Async
# ============================================
futures = "0.3"

# ============================================
# Error Handling
# ============================================
thiserror = "1.0"
anyhow = "1.0"

# ============================================
# Utilities
# ============================================
base64 = "0.21"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }

# ============================================
# Math & Signal Processing
# ============================================
rustfft = "6.1"
num-complex = "0.4"
nalgebra = { version = "0.32", default-features = false }

# ============================================
# Color
# ============================================
palette = "0.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Optimize for small binary size
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-simd", "--enable-bulk-memory"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
