[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "transcriber_core"
version = "1.0.0"
description = "High-performance Rust extensions for Social Video Transcriber AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Social Video Transcriber AI Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Multimedia :: Video",
]
keywords = [
    "transcription",
    "video",
    "nlp",
    "rust",
    "high-performance",
    "text-processing",
    "search",
    "caching"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/blatam-academy/social-video-transcriber-ai"
Documentation = "https://github.com/blatam-academy/social-video-transcriber-ai#readme"
Repository = "https://github.com/blatam-academy/social-video-transcriber-ai"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "transcriber_core.transcriber_core"
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true












