[package]
name = "transcriber-wasm"
version = "1.0.0"
edition = "2021"
description = "WebAssembly module for browser-based transcription processing"
license = "MIT"
repository = "https://github.com/blatam-academy/social-video-transcriber"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
js-sys = "0.3.66"
web-sys = { version = "0.3.66", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Worker",
    "MessageEvent",
    "File",
    "FileReader",
    "Storage",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

futures = "0.3"

thiserror = "1.0"
anyhow = "1.0"

base64 = "0.21"
console_error_panic_hook = { version = "0.1.7", optional = true }

regex = "1.10"
unicode-segmentation = "1.10"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-simd"]












