[package]
name = "benchmark-core"
version = "0.1.0"
edition = "2021"
description = "High-performance benchmark core for universal model benchmarking"
authors = ["Blatam Academy"]
license = "MIT"
repository = "https://github.com/blatam-academy/universal-model-benchmark-ai"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ML/AI - Candle (Rust ML framework)
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
tokenizers = "0.15"

# Math and stats
ndarray = "0.15"
statrs = "0.16"

# Random number generation
rand = "0.8"

# Text processing
regex = "1.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.20", features = ["auto-initialize"] }

[lib]
name = "benchmark_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "benchmark-worker"
path = "src/bin/worker.rs"

