[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-separator"
dynamic = ["version"]
description = "Advanced Audio Source Separation Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Blatam Academy"}
]
scripts = [
    "audio-separator = audio_separator.cli:main",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.20.0",
    "tqdm",
    "typing-extensions",
]

[project.optional-dependencies]
all = [
    "audio-separator[demucs,spleeter,lalal]",
]
demucs = [
    "demucs>=4.0.0",
]
spleeter = [
    "spleeter>=2.3.0",
    "tensorflow>=2.0.0",
]
lalal = [
    "requests>=2.25.0",
]
audio = [
    "librosa>=0.9.0",
    "soundfile>=0.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "ipywidgets>=8.0.0",
]

[project.urls]
"Homepage" = "https://github.com/blatam-academy/audio-separator"
"Bug Tracker" = "https://github.com/blatam-academy/audio-separator/issues"
"Documentation" = "https://github.com/blatam-academy/audio-separator/docs"

[tool.setuptools]
packages = ["audio_separator"]

[tool.setuptools.dynamic]
version = {attr = "audio_separator.__version__"}

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "numpy.*",
    "librosa.*",
    "soundfile.*",
    "demucs.*",
    "spleeter.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

