[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier-model-run"
version = "2.0.0"
description = "🚀 Enterprise-grade ML inference platform with advanced features"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Frontier-Model-Run Team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core Framework
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    
    # LLM Development
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "peft>=0.6.0",
    
    # Scientific Computing
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "httpx>=0.26.0",
    
    # SOTA 2025 Agentic Core
    "chromadb>=0.4.22",
    "tenacity>=8.2.3",
    "vllm>=0.3.0",
    "aiohttp>=3.9.0",
    
    # Messaging Adapters
    "python-telegram-bot>=20.8",
    "discord.py>=2.3.2",
    "slack_sdk>=3.26.0",
    "twilio>=8.12.0",
    "msal>=1.26.0",
    
    # Monitoring & Observability
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
    
    # Storage & Caching
    "redis>=5.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "tqdm>=4.66.0",
    
    # Compression
    "brotli>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
gpu = [
    "cupy>=12.3.0",
    "numba>=0.59.0",
    "flash-attn>=2.4.0; platform_machine != 'arm64'",
    "xformers>=0.0.23; platform_machine != 'arm64'",
]
distributed = [
    "deepspeed>=0.12.0",
    "fairscale>=0.4.13",
]
ui = [
    "gradio>=4.7.0",
    "streamlit>=1.28.0",
]
monitoring = [
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
]
advanced-rag = [
    "unstructured>=0.12.0",
    "pypdf>=4.0.0",
    "sentence-transformers>=2.3.0",
]
web-automation = [
    "tavily-python>=0.3.1",
    "duckduckgo-search>=4.4.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.41.0",
]
multi-modal = [
    "openai-whisper>=20231117",
    "opencv-python>=4.9.0",
]
orchestration = [
    "langgraph>=0.0.10",
]
research = [
    "arxiv>=2.1.0",
    "wikipedia>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/frontier-model-run"
Documentation = "https://docs.frontier-model-run.com"
Repository = "https://github.com/frontier-model-run/frontier-model-run"
Issues = "https://github.com/frontier-model-run/frontier-model-run/issues"

[project.scripts]
frontier = "cli:app"
openclaw = "cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

